--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,7 +108,7 @@ a:hover {
 .courses-title {
     font-family: Playfair Display, serif;
     font-weight: bold;
-    font-size: 28px;
+    font-size: 2.25rem;
 }
 
 .courses_img {
