--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -291,3 +291,11 @@ a:hover {
     font-family: Playfair Display, serif;
     font-size: 18px;
 }
+
+.testimonial-div{
+    text-align: center!important;
+}
+
+.certif-test{
+    padding:30px 0;
+}
