--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -294,8 +294,30 @@ a:hover {
 
 .testimonial-div{
     text-align: center!important;
+    padding: 20px;
+    background-color: #1C2C5A;
+    border-radius: 10px;
+    color: #fff;
 }
 
 .certif-test{
     padding:30px 0;
+}
+.testimonial-tilte{
+    text-align: center;
+    font-weight: bold;
+    font-family: Playfair Display, serif;
+    /* font-size: 18px; */
+}
+
+.cources-list li{
+    list-style: none;
+    margin: 10px 0;
+}
+.cources-list li i{
+   color: #FCB813;
+   font-size: 20px;
+}
+.list-div{
+    padding: 20px;
 }
