--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@ hr{
 /* //_____________Herrobanner__start________________// */
 
 .Herrobannerspardha {
-    background: url(../app/assets/images/background/mumbai-hero-banner.png);
+    background: url(../app/assets/images/background/mumbai-hero-banner.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     width: 100%;
