--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -365,6 +365,14 @@ hr {
 
 @media(max-width:768px) {
 
+    .Herrobannerspardha {
+        background: url(../app/assets/images/background/mumbai-hero-banner-mobile.jpg);
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        width: 100%;
+        height: 90vh;
+    
+    }
     .herobanner-title {
         font-size: 38px;
     }
