--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -399,4 +399,7 @@ hr {
     .courses-para{
         text-align: justify;
     }
+    .certif-coursers img{
+        width: 100%!important;
+    }
 }
